--- a/neuralnetworks/tex/finalreport.tex
+++ b/neuralnetworks/tex/finalreport.tex
@@ -82,6 +82,13 @@ The problem for this project is, given the training data set of 52 features and 
 
 \section{Experimental Process}
 
+The first step was to train an LVQ network with the full set of 52 features.  This was done by creating an LVQ network in NeuralWorks (NW) from the InstaNet menu.  The parameters were as follows:
+
+\begin{center}
+\includegraphics[scale=0.3]{52parameters.png}
+\end{center}
+
+
 
 
 \subsection{Results}
