--- a/neuralnetworks/tex/logbook.tex
+++ b/neuralnetworks/tex/logbook.tex
@@ -88,7 +88,7 @@ I am also frustrated that I asked to be able to develop my own algorithm for the
 
 Okay, now that I have that off my chest, I can get started.  The first step is to learn about the LVQ sufficiently to know what it is I am doing.  The similarity between the LVQ and SOM (and common heritage) means that many of the resources for the LVQ also overlap with those for the SOM.  
 
-Now that that is done, the task is to actually run the first set of experiments with all 52 of the available features.  This is easy, and as expected the performance converges at around 93\%.  The only consideration is in how many hidden layer PE to use.  Since there are 5 outputs and the definition of LVQ is to have the same number of hidden competitive PE's per output, I choose 50, just to be safe.  
+Now that that is done, the task is to actually run the first set of experiments with all 52 of the available features.  The only consideration is in how many hidden layer PE to use.  Since there are 5 outputs and the definition of LVQ is to have the same number of hidden competitive PE's per output, I choose 50, just to be safe.  
 
 This leads to a consideration of what experiments to run.  Do I want to just accept 50 as a good number, or should I do some comparative runs to make sure 50 is optimal?  Probably should.  So here is an outline of potential experiments to get the most thorough range of results:
 
@@ -112,7 +112,7 @@ This leads to a consideration of what experiments to run.  Do I want to just acc
 
 Ultimately, NeuralWorks does do the job of executing various neural network paradigms, so it is legitimate in that regard.  My main complaint can be boiled down to that I still must execute many mechanical repetitive steps in order to get anything done, which is what the computer is supposed to be doing for you.  The advantage of being able to use NW from a programming language would be that as I learned more and used the software in real applications I could progressively automate more and more of the operations I previously had to perform manually.  This would lead to my ability to harness the tool with ever increasing usefulness.  The inability to perform more functionality than the designers built into the software means that there is a hard limit to what is achievable through the program alone.  
 
-Regardless, some measure of work can still be done in this limited framework, and I was able to complete the assignment as given (with the help of an external programming environment to actually process the weights and the outputs for the various runs).  
+Regardless, some measure of work can still be done in this limited framework, and I was able to complete the assignment as given (with the help of an external programming environment to actually process and plot the weights and the outputs for the various runs).  
 
 \end{document} 
 
