--- a/neuralnetworks/tex/logbook.tex
+++ b/neuralnetworks/tex/logbook.tex
@@ -110,7 +110,7 @@ This leads to a consideration of what experiments to run.  Do I want to just acc
 
 \subsubsection{Forgiving and Accepting NeuralWorks}
 
-Ultimately, NeuralWorks does do the job of executing various neural network paradigms, so it is legitimate in that regard.  My main complaint can be boiled down to that I still must execute many mechanical repetitive steps in order to get anything done, which is what the computer is supposed to be doing for you.  The advantage of being able to use NW from a programming language would be that as I learned more and used the software in real applications I could progressively automate more and more of the operations I previously had to perform manually.  This would lead to my ability to harness the tool with ever increasing usefulness.  The inability to perform more functionality than the designers built into the software means that there is a hard limit to what is achievable through the program alone.  
+Ultimately, NeuralWorks does do the job of executing various neural network paradigms, so it is legitimate in that regard.  It is obvious that a great amount of work went into implementing all of these paradigms efficiently.  My main complaint can be boiled down to that I still must execute many mechanical repetitive steps in order to get anything done, which is what the computer is supposed to be doing for you.  The advantage of being able to use NW from a programming language would be that as I learned more and used the software in real applications I could progressively automate more and more of the operations I previously had to perform manually.  This would lead to my ability to harness the tool with ever increasing usefulness.  The inability to perform more functionality than the designers built into the software means that there is a hard limit to what is achievable through the program alone.  
 
 Regardless, some measure of work can still be done in this limited framework, and I was able to complete the assignment as given (with the help of an external programming environment to actually process and plot the weights and the outputs for the various runs).  
 
